--- a/index.html
+++ b/index.html
@@ -102,20 +102,6 @@
                 </div>
 
             </div>
-	    <br>	
-            <!-- RRS -->
-            <div class="mdui-card card">
-
-                <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title">博客RRS</div>
-                </div>
-
-                <!-- 卡片的内容 -->
-                <div class="mdui-card-content mdui-typo">
-                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/feed</a><br>欢迎订阅
-                </div>
-
-            </div>
 
         </div>
 	
@@ -221,13 +207,28 @@
 
         	<div class="mdui-card-primary">
             	    <div class="mdui-card-primary-title">近期文章</div>
-           	    <div class="mdui-card-primary-subtitle">最近在 Fmkli 上发布的 5 瞎乱写文章</div>
+           	    <div class="mdui-card-primary-subtitle">最近在 Fmkli 上发布的 5 瞎乱写文章和状态</div>
       	        </div>
 
         	<!-- 卡片的内容 -->
         	<div class="mdui-card-content" id="posts">
                     <div id="posts-label" class="mdui-list"></div>
                     <div id="post-spinner" class="mdui-spinner mdui-spinner-colorful mdui-center"></div>
+                </div>
+
+            </div>
+		
+	    <br>	
+            <!-- RRS -->
+            <div class="mdui-card card">
+
+                <div class="mdui-card-primary">
+                    <div class="mdui-card-primary-title">博客RRS</div>
+                </div>
+
+                <!-- 卡片的内容 -->
+                <div class="mdui-card-content mdui-typo">
+                Fmkli的博客的RRS：<a href="https://blog.imfmkli.top/feed">https://blog.imfmkli.top/feed</a><br>欢迎订阅
                 </div>
 
             </div>
